tests/ui/nested.stderr
error[E0727]: `async` generators are not yet supported
  --> $DIR/nested.rs:19:13
   |
19 |             yield i * i; //~ ERROR `async` generators are not yet supported [E0727]
   |             ^^^^^^^^^^^
